Fix story sharing spacing in header

--- a/modules/Story/Story.module.scss
+++ b/modules/Story/Story.module.scss
@@ -32,3 +32,7 @@ $story-container-max-width: 720px;
         align-items: center;
     }
 }
+
+.headerShare {
+    margin: $spacing-3 0 $spacing-6;
+}
